--- a/css/New_Gallery_Style.css
+++ b/css/New_Gallery_Style.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: lightgray;
+  background-color: rgb(0, 0, 0);
   height: 80%;
 }
 
@@ -15,4 +15,12 @@
 
 img{
   width: 100%;
+  transition: 0.2s ease all;
+}
+
+img:hover{
+  transform: scale(1.1);
+  box-shadow: 0 0 25px rgba(255, 255, 255, 0.8);
+  border-radius: 15px;
+  transition: 1s ease all;
 }
