--- a/css/Old_Gallery_Style.css
+++ b/css/Old_Gallery_Style.css
@@ -1,18 +1,26 @@
 .galeria {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: lightgray;
-    height: 80%;
-  }
-  
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-gap: 10px;
-    padding: 10px;
-  }
-  
-  img{
-    width: 100%;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(0, 0, 0);
+  height: 80%;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 10px;
+  padding: 10px;
+}
+
+img{
+  width: 100%;
+  transition: 0.2s ease all;
+}
+
+img:hover{
+  transform: scale(1.1);
+  box-shadow: 0 0 25px rgba(255, 255, 255, 0.8);
+  border-radius: 15px;
+  transition: 1s ease all;
+}
