--- a/css/Orion.css
+++ b/css/Orion.css
@@ -62,13 +62,13 @@ header{
     padding: 10px;
 }
   
-img{
+.grid img{
     width: 100%;
     transition: 0.1s ease all;
     border-radius: 10px;
 }
   
-img:hover{
+.grid img:hover{
     transform: scale(1.1);
     border-radius: 0px;
     transition: 0.1s ease all;
@@ -146,7 +146,7 @@ footer{
       padding: 2em;
     }
 
-    img{
+    .grid img{
         width: 50%;
     }
 }
