--- a/css/Orion.css
+++ b/css/Orion.css
@@ -71,8 +71,7 @@ header {
 }
 
 .grid img:hover {
-  transform: scale(1.1);
-  border-radius: 0px;
+  box-shadow: 0px 0px 20px 5px rgb(133, 187, 231);
   transition: 0.1s ease all;
 }
 
