--- a/css/Orion.css
+++ b/css/Orion.css
@@ -93,6 +93,18 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  animation: soft_over 0.6s ease normal;
+}
+
+
+@keyframes soft_over {
+  0% {
+    background-color: rgba(0, 0, 0, 0.0);
+  }
+
+  100% {
+    background-color: rgba(0, 0, 0, 0.9);
+  }
 }
 
 .img-grande {
@@ -100,10 +112,10 @@ header {
   max-width: 100%;
   object-fit: contain;
   border-radius: 15px;
-  animation: img_big 0.2s normal ease;
+  animation: make_big 0.2s normal ease;
 }
 
-@keyframes img_big {
+@keyframes make_big {
   0% {
     transform: scale(0.01);
   }
@@ -122,6 +134,7 @@ header {
   border-radius: 10px;
   background-color: rgb(164, 25, 168);
   color: black;
+  animation: make_big 0.2s normal ease;
 }
 
 .botonSiguiente {
@@ -133,30 +146,31 @@ header {
   border-radius: 10px;
   background-color: rgb(164, 25, 168);
   color: black;
-  animation: fintaBoton 0.2s infinite ease;
+  animation: make_big 0.2s normal ease;
 }
 
-@keyframes fintaBoton {
-  0% {
-    transform: translateX(2px);
-  }
-
-  50% {
-    transform: translateX(-2px);
-  }
-
-  100% {
-    transform: translateX(2px);
-  }
+.botonAnterior {
+  position: absolute;
+  width: 100px;
+  height: 25px;
+  top: 50vh;
+  left: 35px;
+  border-radius: 10px;
+  background-color: rgb(164, 25, 168);
+  color: black;
+  animation: make_big 0.2s normal ease;
 }
 
 /*Footer*/
 footer {
   width: 100%;
-  background: rgb(59, 58, 58);
   display: flex;
   justify-content: center;
   align-items: center;
+  background: linear-gradient(to top, rgb(0, 0, 0), #f8670c);
+  text-align: center;
+  border-top-left-radius: 50% 20px;
+  border-top-right-radius: 50% 20px;
 }
 
 .fc-1 {
